fix: missing margin bottom on pane

--- a/src/assets/scss/layouts/_layout.scss
+++ b/src/assets/scss/layouts/_layout.scss
@@ -20,7 +20,8 @@
 
 @media screen and (max-width: $menu-breakpoint) {
   .pane {
-    margin: var(--content-margin);
+    margin-block-end: var(--content-margin);
+    margin-inline: var(--content-margin);
   }
 }
 
